# nrfdfu

./: LICENSE  README.md
cmake/modules/: utils.cmake
examples/linux_serial/: CMakeLists.txt  app.c
lib/: CMakeLists.txt
lib/include/: nrfdfu_common.h  nrfdfu_contr.h  nrfdfu_transport.h
lib/src/: nrfdfu_contr.c
tests/unit-tests/: CMakeLists.txt
tests/unit-tests/src/: main.c
tests/unit-tests/src/controller/: test-controller.c
